cmake_minimum_required(VERSION 3.17)
project(15__Final_Project_8)

set(CMAKE_CXX_STANDARD 17)

add_executable(15__Final_Project_8 main.cpp document.h document.cpp paginator.h read_input_functions.h read_input_functions.cpp request_queue.h request_queue.cpp search_server.h search_server.cpp string_processing.h string_processing.cpp test_example_functions.h test_example_functions.cpp log_duration.h remove_duplicates.h remove_duplicates.cpp process_queries.h process_queries.cpp concurrent_map.h)